changes: fix width alignment of saving cards.

--- a/frontend/ibudget/src/app/savings/savings.scss
+++ b/frontend/ibudget/src/app/savings/savings.scss
@@ -389,7 +389,8 @@ main {
   .savings-container {
     flex-direction: column;
     align-items: center;
-    width: 100vw;
+    justify-content: center;
+    width: 100%;
     padding: 0;
   }
 
